--- a/app_data.json
+++ b/app_data.json
@@ -357,6 +357,40 @@
         ]
       },
       {
+        "name": "５　　たし算とひき算の筆算⑴",
+        "apps": [
+          {
+            "id": "48_kuriagari_nasi",
+            "title": "くりあがりのない たし算",
+            "path": "2nen/05_hissan_th1/48_kuriagari_nasi.html"
+          },
+          {
+            "id": "50_tasu_to_over10_rank1",
+            "title": "一のくらいが くりあがる たし算",
+            "path": "2nen/05_hissan_th1/50_tasu_to_over10_rank1.html"
+          },
+          {
+            "id": "51_2keta_hissan_sum",
+            "title": "十のくらいが くりあがる たし算",
+            "path": "2nen/05_hissan_th1/51_2keta_hissan_sum.html"
+          },
+          {
+            "id": "51-7,9_iroirona_tasizanno_hissan",
+            "title": "いろいろなたし算",
+            "path": "2nen/05_hissan_th1/51-7,9_iroirona_tasizanno_hissan.html"
+          },
+          {
+            "id": "55-3_kurisagarinonai_2ketano_hissan ",
+            "title": "くり下がりのないひき算",
+            "path": "2nen/05_hissan_th1/55-3_kurisagarinonai_2ketano_hissan .html"
+          }
+        ]
+      },
+      {
+        "name": "〇　　見方・考え方を ふかめよう(1)",
+        "apps": []
+      },
+      {
         "name": "６　　100をこえる数",
         "apps": []
       },
@@ -365,11 +399,11 @@
         "apps": []
       },
       {
-        "name": "●　買えますか？ 買えませんか？",
+        "name": "〇　　買えますか？ 買えませんか？",
         "apps": []
       },
       {
-        "name": "●　算数の じゆうけんきゅう",
+        "name": "〇　　算数の じゆうけんきゅう",
         "apps": []
       },
       {
@@ -377,7 +411,7 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を ふかめよう(2)",
+        "name": "〇　　見方・考え方を ふかめよう(2)",
         "apps": []
       },
       {
@@ -519,15 +553,15 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を ふかめよう(3)",
+        "name": "〇　　見方・考え方を ふかめよう(3)",
         "apps": []
       },
       {
-        "name": "●　どんな 計算に なるのかな",
+        "name": "〇　　どんな 計算に なるのかな",
         "apps": []
       },
       {
-        "name": "●　何番目",
+        "name": "〇　　何番目",
         "apps": []
       },
       {
@@ -601,7 +635,7 @@
         ]
       },
       {
-        "name": "●　見方・考え方を 深めよう",
+        "name": "〇　　見方・考え方を 深めよう",
         "apps": []
       },
       {
@@ -718,11 +752,11 @@
         ]
       },
       {
-        "name": "●　どんな 計算に なるのかな",
+        "name": "〇　　どんな 計算に なるのかな",
         "apps": []
       },
       {
-        "name": "●　算数の 自由研究",
+        "name": "〇　　算数の 自由研究",
         "apps": []
       },
       {
@@ -842,11 +876,11 @@
         ]
       },
       {
-        "name": "●　間の数",
+        "name": "〇　　間の数",
         "apps": []
       },
       {
-        "name": "●　わくわくプログラミング",
+        "name": "〇　　わくわくプログラミング",
         "apps": []
       },
       {
@@ -965,11 +999,11 @@
         "apps": []
       },
       {
-        "name": "●　見積もりを使って",
+        "name": "〇　　見積もりを使って",
         "apps": []
       },
       {
-        "name": "●　算数の自由研究",
+        "name": "〇　　算数の自由研究",
         "apps": []
       },
       {
@@ -1045,7 +1079,7 @@
         "apps": []
       },
       {
-        "name": "●　そろばん",
+        "name": "〇　　そろばん",
         "apps": []
       },
       {
@@ -1057,7 +1091,7 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を深めよう(1)",
+        "name": "〇　　見方・考え方を深めよう(1)",
         "apps": []
       },
       {
@@ -1065,11 +1099,11 @@
         "apps": []
       },
       {
-        "name": "●　どんな計算になるのかな",
+        "name": "〇　　どんな計算になるのかな",
         "apps": []
       },
       {
-        "name": "●　だれでしょう",
+        "name": "〇　　だれでしょう",
         "apps": []
       },
       {
@@ -1077,7 +1111,7 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を深めよう(2)",
+        "name": "〇　　見方・考え方を深めよう(2)",
         "apps": []
       },
       {
@@ -1093,15 +1127,15 @@
         "apps": []
       },
       {
-        "name": "●　わくわくプログラミング",
+        "name": "〇　　わくわくプログラミング",
         "apps": []
       },
       {
-        "name": "●　わくわくSDGs",
+        "name": "〇　　わくわくSDGs",
         "apps": []
       },
       {
-        "name": "●　もうすぐ5年生",
+        "name": "〇　　もうすぐ5年生",
         "apps": []
       }
     ]
@@ -1138,15 +1172,15 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を深めよう(1)",
+        "name": "〇　　見方・考え方を深めよう(1)",
         "apps": []
       },
       {
-        "name": "●　どんな計算になるのかな",
+        "name": "〇　　どんな計算になるのかな",
         "apps": []
       },
       {
-        "name": "●　算数の自由研究",
+        "name": "〇　　算数の自由研究",
         "apps": []
       },
       {
@@ -1170,7 +1204,7 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を深めよう(2)",
+        "name": "〇　　見方・考え方を深めよう(2)",
         "apps": []
       },
       {
@@ -1178,11 +1212,11 @@
         "apps": []
       },
       {
-        "name": "●　人文字",
+        "name": "〇　　人文字",
         "apps": []
       },
       {
-        "name": "●　見積もりを使って",
+        "name": "〇　　見積もりを使って",
         "apps": []
       },
       {
@@ -1206,19 +1240,19 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を深めよう(3)",
+        "name": "〇　　見方・考え方を深めよう(3)",
         "apps": []
       },
       {
-        "name": "●　わくわくプログラミング",
+        "name": "〇　　わくわくプログラミング",
         "apps": []
       },
       {
-        "name": "●　わくわくSDGs",
+        "name": "〇　　わくわくSDGs",
         "apps": []
       },
       {
-        "name": "●　もうすぐ6年生",
+        "name": "〇　　もうすぐ6年生",
         "apps": []
       }
     ]
@@ -1247,15 +1281,15 @@
         "apps": []
       },
       {
-        "name": "●　場合を順序よく整理して",
+        "name": "〇　　場合を順序よく整理して",
         "apps": []
       },
       {
-        "name": "●　どんな計算になるのかな",
+        "name": "〇　　どんな計算になるのかな",
         "apps": []
       },
       {
-        "name": "●　算数の自由研究",
+        "name": "〇　　算数の自由研究",
         "apps": []
       },
       {
@@ -1275,7 +1309,7 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を深めよう(1)",
+        "name": "〇　　見方・考え方を深めよう(1)",
         "apps": []
       },
       {
@@ -1291,15 +1325,15 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を深めよう(2)",
+        "name": "〇　　見方・考え方を深めよう(2)",
         "apps": []
       },
       {
-        "name": "●　見積もりを使って",
+        "name": "〇　　見積もりを使って",
         "apps": []
       },
       {
-        "name": "●　わくわくプログラミング",
+        "name": "〇　　わくわくプログラミング",
         "apps": []
       },
       {
@@ -1307,23 +1341,23 @@
         "apps": []
       },
       {
-        "name": "●　見方・考え方を深めよう(3)",
+        "name": "〇　　見方・考え方を深めよう(3)",
         "apps": []
       },
       {
-        "name": "●　すごろく",
+        "name": "〇　　すごろく",
         "apps": []
       },
       {
-        "name": "●　わくわくSDGs",
+        "name": "〇　　わくわくSDGs",
         "apps": []
       },
       {
-        "name": "●　６年のまとめ",
+        "name": "〇　　６年のまとめ",
         "apps": []
       },
       {
-        "name": "●　未来へのとびら",
+        "name": "〇　　未来へのとびら",
         "apps": []
       }
     ]
