--- a/app_data.json
+++ b/app_data.json
@@ -1012,7 +1012,8 @@
           {
             "id": "53_wakuwaku_programming",
             "title": "わくわく　プログラミング",
-            "path": "3nen/16_programming/53_wakuwaku_programming.html"
+            "path": "3nen/16_programming/53_wakuwaku_programming.html",
+            "page": "53"
           }
         ]
       },
